# codeowners-rs

./: .gitignore  .rusty-hook.toml  AGENTS.md  BUG_REPORT.md  BUG_SUMMARY.md  CONFIGURATION.md  Cargo.toml  OWNERSHIP.md  README.md  _typos.toml  rust-toolchain.toml  test-files-param.md
.github/workflows/: audit.yml  ci.yml  codeowners.yml  dotslash-config.json
ai-prompts/: for-file-optimization.md  overrides.md  validate-optimization.md
dev/: run_benchmarks.sh  run_benchmarks_for_file.sh  run_benchmarks_for_gv.sh
prompts/: owner-overrides.md
src/: cli.rs  common_test.rs  config.rs  crosscheck.rs  ext.rs  files.rs  ignore.rs  lib.rs  main.rs  ownership.rs  path_utils.rs  project.rs  project_builder.rs  project_file_builder.rs  runner.rs  tracked_files.rs  verify.rs
src/cache/: file.rs  mod.rs  noop.rs
src/ownership/: codeowners_file_parser.rs  codeowners_query.rs  fast.rs  file_generator.rs  file_owner_finder.rs  file_owner_resolver.rs  for_file_fast.rs  mapper.rs  parser.rs  tests.rs  validator.rs
src/ownership/mapper/: annotated_file_mapper.rs  directory_mapper.rs  escaper.rs  package_mapper.rs  team_file_mapper.rs  team_gem_mapper.rs  team_glob_mapper.rs  team_yml_mapper.rs
src/project/: validator.rs
src/runner/: api.rs  types.rs
tests/: bug_identification_test.rs  cache_test.rs  codeowners_path_test.rs  crosscheck_owners_test.rs  custom_executable_name_test.rs  executable_name_config_test.rs  git_stage_test.rs  invalid_project_structure_test.rs  invalid_project_test.rs  missing_github_team_test.rs  multiple_directory_owners_test.rs  run_config_executable_override_test.rs  runner_api.rs  untracked_files_test.rs  valid_project_test.rs  valid_project_with_overrides_test.rs  validate_files_test.rs  verify_compare_for_file_mismatch_test.rs
tests/common/: mod.rs
tests/fixtures/custom_codeowners_path/config/: code_ownership.yml
tests/fixtures/custom_codeowners_path/docs/: CODEOWNERS
tests/fixtures/custom_executable_name/.github/: CODEOWNERS
tests/fixtures/custom_executable_name/app/: foo.rb
tests/fixtures/custom_executable_name/config/: code_ownership.yml
tests/fixtures/default_executable_name/.github/: CODEOWNERS
tests/fixtures/default_executable_name/app/: bar.rb
tests/fixtures/default_executable_name/config/: code_ownership.yml
tests/fixtures/invalid_project/config/: code_ownership.yml
tests/fixtures/javascript_only_project/.github/: CODEOWNERS
tests/fixtures/javascript_only_project/config/: code_ownership.yml
tests/fixtures/valid_project/: .ignore
(+54 files in other folders)
