[package]
name = "codeowners"
version = "0.2.1"
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = "4.5.18"
error-stack = "0.5.0"
glob-match = "0.2.1"
ignore = "0.4.23"
itertools = "0.13.0"
path-clean = "1.0.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tempfile = "3.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
rusty-hook = "^0.11.2"
predicates = "3.1.2"
pretty_assertions = "1.4.1" # Shows a more readable diff when comparing objects
indoc = "2.0.5"
