[package]
name = "codeowners"
version = "0.2.8"
edition = "2024"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = "4.5.18"
crossbeam-channel = "0.5.15"
error-stack = "0.5.0"
enum_dispatch = "0.3.13"
fast-glob = "1.0.0"
glob = "0.3.2"
ignore = "0.4.23"
itertools = "0.14.0"
lazy_static = "1.5.0"
memoize = "0.5.1"
path-clean = "1.0.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tempfile = "3.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
rusty-hook = "^0.11.2"
predicates = "3.1.2"
pretty_assertions = "1.4.1" # Shows a more readable diff when comparing objects
indoc = "2.0.5"
