[package]
name = "codeowners"
version = "0.3.1"
edition = "2024"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap_derive = "4.5.45"
crossbeam-channel = "0.5.15"
error-stack = "0.5.0"
enum_dispatch = "0.3.13"
fast-glob = "1.0.0"
glob = "0.3.3"
ignore = "0.4.23"
itertools = "0.14.0"
lazy_static = "1.5.0"
memoize = "0.5.1"
path-clean = "1.0.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tempfile = "3.21.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
rusty-hook = "^0.11.2"
predicates = "3.1.3"
pretty_assertions = "1.4.1" # Shows a more readable diff when comparing objects
indoc = "2.0.6"
